--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,16 @@
 				<li><a href="https://www.google.com/search?hl=en&gl=us&tbm=nws&q=john+robinson+store">News</a></li>
 				<li><a href="http://jr-final.herokuapp.com">Contact</a></li>
 			</ul>
+			
+			<% if session[:user_id] %>
+			<ul>
+				<li><%= link_to 'Orders', orders_path %></li>
+				<li><%= link_to 'Products', products_path %></li>
+				<li><%= link_to 'Users', users_path %></li>
+			</ul> 
+			<%= button_to 'Logout', logout_path, method: :delete %>
+			<%end%>
+			
 		</div>
 		<div id="main">
 			<%= yield %>
